// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput renders correctly 1`] = `
<div
  class="za-custom-input za-custom-input--number"
>
  <div
    class="za-custom-input__content"
  >
    <div
      class="za-custom-input__placeholder"
    />
    <div
      class="za-custom-input__virtual-input"
    />
    <input
      type="hidden"
      value=""
    />
  </div>
</div>
`;

exports[`CustomInput renders correctly if type isn't valid 1`] = `
<div
  class="za-custom-input za-custom-input--xxx"
>
  <div
    class="za-custom-input__content"
  >
    <div
      class="za-custom-input__placeholder"
    />
    <div
      class="za-custom-input__virtual-input"
    />
    <input
      type="hidden"
      value=""
    />
  </div>
</div>
`;

exports[`CustomInput.Idcard renders correctly 1`] = `
<CustomInput
  maxLength={18}
  type="idcard"
>
  <div
    className="za-custom-input za-custom-input--idcard"
    onClick={[Function]}
  >
    <div
      className="za-custom-input__content"
    >
      <div
        className="za-custom-input__placeholder"
      />
      <div
        className="za-custom-input__virtual-input"
      />
      <input
        type="hidden"
        value=""
      />
    </div>
    <KeyboardPicker
      onKeyClick={[Function]}
      type="idcard"
      visible={false}
    >
      <Popup
        destroy={true}
        mask={false}
        visible={false}
      />
    </KeyboardPicker>
  </div>
</CustomInput>
`;

exports[`CustomInput.Price renders correctly 1`] = `
<CustomInput
  type="price"
>
  <div
    className="za-custom-input za-custom-input--price"
    onClick={[Function]}
  >
    <div
      className="za-custom-input__content"
    >
      <div
        className="za-custom-input__placeholder"
      />
      <div
        className="za-custom-input__virtual-input"
      />
      <input
        type="hidden"
        value=""
      />
    </div>
    <KeyboardPicker
      onKeyClick={[Function]}
      type="price"
      visible={false}
    >
      <Popup
        destroy={true}
        mask={false}
        visible={false}
      />
    </KeyboardPicker>
  </div>
</CustomInput>
`;
